clusters/home/apps/cryptopedia-api-image-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cryptopedia-api
  namespace: api
spec:
  template:
    spec:
      containers:
        - name: api
          image: ghcr.io/miner-s-life/cryptopedia-ex-api:latest # {"$imagepolicy": "flux-system:cryptopedia-api"}
