clusters/home/apps/cryptopedia-web-image-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cryptopedia-web
  namespace: web
spec:
  template:
    spec:
      containers:
        - name: cryptopedia-web
          image: ghcr.io/miner-s-life/cryptopedia-web:latest # {"$imagepolicy": "flux-system:cryptopedia-web"}
